<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/welcomeNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/welcome_to_game_note"
        android:layout_marginLeft="10dp"
        android:textColor="#2196F3"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        android:layout_marginStart="10dp" />

    <Button
        android:id="@+id/AddNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_new_notes"
        app:backgroundTint="#03A9F4" />

    <TextView
        android:id="@+id/tvClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_your_notes"
        android:textColor="#000000" />

    <ListView
        android:id="@+id/lv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>