<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"

    tools:context=".ViewNote">

    <TextView
        android:id="@+id/viewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview"
        android:textSize="30sp"
        android:textColor="#2196F3"
        android:gravity="center"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/viewAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/textview"
        android:textColor="#3F51B5"
        android:textColorHighlight="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/viewGameName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/textview"
            android:layout_marginEnd="5dp" />

        <TextView
            android:id="@+id/viewNoteType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/textview"
            android:layout_marginStart="5dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/viewDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/textview" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/back_to_note_list"
        app:backgroundTint="#00BCD4" />

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/edit_note"
        app:backgroundTint="#00BCD4" />

</LinearLayout>